# fluid-grep

./: Cargo.toml  FIXES.md  PATCHES_NEEDED.md  README.md  benchmark.bat  benchmark.sh
.github/: FUNDING.yml
crates/cli/: Cargo.toml
crates/core/: cache.rs  haystack.rs  heuristic.rs  incremental.rs  main.rs  optimizer.rs  ripgrep_config.rs  search.rs  simd.rs
crates/core/flags/: defs.rs  hiargs.rs  lowargs.rs  parse.rs
crates/ignore/src/: walk.rs
