[package]
name = "grep-cli"
version = "0.1.12"  #:version
authors = ["A9X11 <playaura.ai@gmail.com>"]
description = """
Utilities for search oriented command line applications.
"""
documentation = "https://docs.rs/grep-cli"
homepage = "https://github.com/playauraai/ripgrep-fluid/tree/main/crates/cli"
repository = "https://github.com/playauraai/ripgrep-fluid/tree/main/crates/cli"
readme = "README.md"
keywords = ["regex", "grep", "cli", "utility", "util"]
license = "Unlicense OR MIT"
edition = "2024"

[dependencies]
bstr = { version = "1.6.2", features = ["std"] }
globset = { version = "0.4.18", path = "../globset" }
log = "0.4.20"
termcolor = "1.3.0"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.6"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.148"
